[tool.poetry]
name = "DonorDrivePython"
version = "1.3.0"
description = "A utility to access the DonorDrive API"
license = "GPL-3.0-or-later"
authors = ["Eric Mesa <ericsbinaryworld@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/djotaku/DonorDrivePython"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^10.12.0"
requests = "^2.26.0"
xdgenvpy = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
