[tool.poetry]
name = "DonorDrivePython"
version = "1.4.5"
description = "A utility to access the DonorDrive API"
license = "GPL-3.0-or-later"
authors = ["Eric Mesa <ericsbinaryworld@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/djotaku/DonorDrivePython"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.4.4"
requests = "2.28.1"
xdgenvpy = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
